@@ -8,12 +8,8 @@ no  warnings 'syntax';
 
 my $garbage = "Debian_CPANTS.txt";
 
-eval {
-    require Test::Kwalitee;
-    Test::Kwalitee -> import;
-};
-
-plan skip_all => "Test::Kwalitee not installed; skipping" if $@;
+eval "use Test::Kwalitee 1.01; 1" or
+      plan skip_all => "Test::Kwalitee 1.01 required to test Kwalitee";
 
 if (-f $garbage) {
     unlink $garbage or die "Failed to clean up $garbage";
